--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
     # https://docs.github.com/en/actions/how-tos/write-workflows/choose-what-workflows-do/pass-job-outputs
     if: needs.filter-changes.outputs.has_relevant_changes == 'true'
     uses: ./.github/workflows/test_and_build.yml
+    secrets:
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
   publish:
     needs: test-and-build
