--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -2,6 +2,9 @@ name: Lint, Test, and Build
 
 on:
   workflow_call:
+    secrets:
+      GITHUB_TOKEN:
+        required: true
 
 jobs:
   test-and-build:
@@ -13,3 +16,5 @@ jobs:
 
       - name: Setup, install,lint,test and build code
         uses: ./.github/actions/test_and_build
+        with:
+          secret_input_github_token: ${{secrets.GITHUB_TOKEN}}
