instead of setting github_token under with keyword, setting GITHUB_TOKEN under env keyword only in the action.yml file

--- a/.github/actions/test_and_build/action.yml
+++ b/.github/actions/test_and_build/action.yml
@@ -44,10 +44,9 @@ runs:
     - name: Jest Coverage Comment
       id: coverage
       env:
-        gh_token: ${{ inputs.secret_input_github_token }}
+        GITHUB_TOKEN: ${{ inputs.secret_input_github_token }}
       uses: mattallty/jest-github-action@v1
       with:
-        github-token: ${{env.gh_token}}
         test-command: 'yarn test'
 
     # # Adding the test results to the Job summary
