added permissions in test_and_build.yml reusable workflow file to give the mattalty/jest-github-action@v1 under action.yml file to access to publish coverage results in pull request

--- a/.github/actions/test_and_build/action.yml
+++ b/.github/actions/test_and_build/action.yml
@@ -43,6 +43,7 @@ runs:
     #   if: always()
     - name: Jest Coverage Comment
       id: coverage
+      # GITHUB_TOKEN is the name of variable used internally by mattalty/jest-github-action
       env:
         GITHUB_TOKEN: ${{ inputs.secret_input_github_token }}
       uses: mattallty/jest-github-action@v1
