--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -9,7 +9,11 @@ on:
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
-
+    # set permissions here to avoid the error : Resource not accessible by integration
+    permissions:
+      checks: write
+      pull-requests: write
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
