--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -10,10 +10,12 @@ jobs:
   test-and-build:
     runs-on: ubuntu-latest
     # set permissions here to avoid the error : Resource not accessible by integration
-    permissions:
-      checks: write
-      pull-requests: write
-      contents: write
+    # since it is a resuable workflow it doesn't have the ability to set the permission
+    # permission has to be set in the ci.yml file only
+    # permissions:
+    #   checks: write
+    #   pull-requests: write
+    #   contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
