--- a/.github/actions/test_and_build/action.yml
+++ b/.github/actions/test_and_build/action.yml
@@ -54,6 +54,7 @@ runs:
         # this will skip installing dependencies and running test-script, by default skip-step: none so it will install and run test-script
         skip-step: all
         coverage-file: ${{github.workspace}}/coverage/coverage-final.json
+        base-coverage-file: ${{github.workspace}}/coverage/coverage-final.json
         output: comment, report-markdown
         icons: emoji
 
