changed package.json script: test: jest --json --coverage --outputfile=report.json, in test_and_build/action.yml file change coverage and base-coverage file to report.json and added cat heredoc  in the check the output coverage

--- a/.github/actions/test_and_build/action.yml
+++ b/.github/actions/test_and_build/action.yml
@@ -70,7 +70,9 @@ runs:
       run: |
         echo "TEST RESULTS:" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        cat  "${{steps.coverage.outputs.report }}" >> $GITHUB_STEP_SUMMARY
+        cat <<EOF >> "$GITHUB_STEP_SUMMARY"
+        ${{ steps.coverage.outputs.report }}
+        EOF
       shell: bash
       if: always()
 
