--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": " yarn clean && rollup -c",
     "dev": "rollup -c -w",
-    "test": "jest --json --coverage --outputFile=report.json",
+    "test": "jest --json --coverage --outputFile=./coverage/report.json",
     "test:watch": "jest src --watch ",
     "prepare": "husky",
     "lint": "eslint src",
