--- a/.github/actions/test_and_build/action.yml
+++ b/.github/actions/test_and_build/action.yml
@@ -9,12 +9,33 @@ runs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
-        # this only caches the node packages, but still yarn install will take time as yarn install has to compile the code in yarn packages to specific node version
-        # for advance caching see below
-        cache: 'yarn'
-        # ensure is cache is dependent on yarn.lock, so cache is update when dependencies change, useful for caching in monorepo
-        cache-dependency-path: yarn.lock
+        node-version: 18.20.8
+        # https://github.com/actions/setup-node
+        # https://oozou.com/blog/ci-cd-tips-improve-your-ci-cd-with-cache-github-version-209
+        # # this only caches the node packages, but still yarn install will take time as yarn install has to compile the code in yarn packages to specific node version
+        # # for advance caching see below
+        # cache: 'yarn'
+        # # ensure is cache is dependent on yarn.lock, so cache is update when dependencies change, useful for caching in monorepo
+        # cache-dependency-path: yarn.lock
+
+    # https://oozou.com/blog/ci-cd-tips-improve-your-ci-cd-with-cache-github-version-209
+    - name: Get node version
+      id: node_v
+      run: |
+        echo "version=$(node -v)" >> $GITHUB_OUTPUT
+      shell: bash
+
+    - name: Get node_modules
+      uses: actions/cache@v4
+      id: node_modules
+      with:
+        path: |
+          **/node_modules
+        # Adding node version as cache key
+        key:
+          ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{
+          steps.node_v.outputs.version }}
+      shell: bash
 
     - name: Install dependencies
       run: yarn install  --frozen-lockfile
