checking the fastness of actions/cache@v4

--- a/.github/actions/test_and_build/action.yml
+++ b/.github/actions/test_and_build/action.yml
@@ -31,6 +31,7 @@ runs:
       with:
         path: |
           **/node_modules
+        # hashing yarn.lock to freeze package dependencies version and checking for those specific verison only
         # Adding node version as cache key
         key:
           ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{
