added workflow_dispatch on ci.yml file to trigger the workflow from external repository

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
   repository_dispatch:
     types:
       - trigger-from-circleci
+  workflow_dispatch:
   pull_request:
     branches:
       - main
