--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,24 +12,10 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - '**.json'
-      - '**.js'
-      - '**/package.json'
-      - '**/yarn.lock'
-      - '**.*rc'
-      - '**.yml'
 
   push:
     branches:
       - main
-    paths:
-      - '**.json'
-      - '**.js'
-      - '**/package.json'
-      - '**/yarn.lock'
-      - '**.*rc'
-      - '**.yml'
 
     # git does not take regex patterns but takes glob patterns
     # https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#filter-pattern-cheat-sheet
@@ -37,9 +23,8 @@ on:
       - 'v[0-9].[0-9]+.[0-9]+' # Trigger release when pushing tags like v1.0.0
 
 jobs:
-  # paths filter somehow started working along with branches so no need for this job
-  # filter-changes:
-  # uses: ./.github/workflows/filter-changes.yml
+  filter-changes:
+    uses: ./.github/workflows/filter-changes.yml
 
   test-and-build:
     # set permissions here to avoid the error : Resource not accessible by integration
@@ -52,9 +37,9 @@ jobs:
       contents: write
     # This job will only run if the 'filter-changes' job's output is 'true'.
     # This is the key to skipping the entire job on empty commits.
-    # needs: filter-changes # paths filter somehow started working along with branches so no need for this job
+    needs: filter-changes # paths filter somehow started working along with branches so no need for this job
     # https://docs.github.com/en/actions/how-tos/write-workflows/choose-what-workflows-do/pass-job-outputs
-    # if: needs.filter-changes.outputs.has_relevant_changes == 'true'
+    if: needs.filter-changes.outputs.has_relevant_changes == 'true'
     uses: ./.github/workflows/test_and_build.yml
     secrets:
       secret_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
