--- a/.github/workflows/gitlab-trigger-and-sync.yml
+++ b/.github/workflows/gitlab-trigger-and-sync.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Github repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 50 # clone full history, avoids shallow push rejection
+          fetch-depth: 20 # clone full history, avoids shallow push rejection
 
       - name: Push to Gitlab and Trigger GitLab Pipeline
         run: bash ./ci-scripts/gitlab-sync-and-trigger.sh
@@ -24,4 +24,4 @@ jobs:
           GITLAB_PUSH_TOKEN: ${{ secrets.GITLAB_PUSH_TOKEN }} # gitlab personal access token with write and read repository scope
           GITLAB_PROJECT_ID: ${{ secrets.GITLAB_PROJECT_ID }}
           GITLAB_BRANCH: ${{ secrets.GITLAB_BRANCH }}
-          GITLAB_PAT: ${{ secrets.GITLAB_PAT}} # gitlab project access token with owner and api scope
+          GITLAB_PAT: ${{ secrets.GITLAB_PAT}} # gitlab project access token with role owner and api and read repository and write repository scope
