added **.yml to changes list in gitlabci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ workflow:
         - '**.js'
         - '**.json'
         - '**.*rc'
+        - '**.yml'
 
     - when: never # do not run pipeline on any other condition
 
