using pipeline trigger token --form based curl command to trigger pipeline

--- a/.github/workflows/gitlab-trigger-and-sync.yml
+++ b/.github/workflows/gitlab-trigger-and-sync.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Push to Gitlab and Trigger GitLab Pipeline
         run: bash ./ci-scripts/gitlab-sync-and-trigger.sh
         env:
-          GITLAB_TRIGGER_TOKEN: ${{ secrets.GITLAB_TRIGGER_TOKEN }} # gitlab personal access token with api write and read repository scope to set variables
-          GITLAB_PUSH_TOKEN: ${{ secrets.GITLAB_PUSH_TOKEN }} # gitlab personal access token with write and read repository scope
+          GITLAB_TRIGGER_TOKEN: ${{ secrets.GITLAB_TRIGGER_TOKEN }} # gitlab pipeline trigger token
+          GITLAB_PUSH_TOKEN: ${{ secrets.GITLAB_PUSH_TOKEN }} # gitlab personal access token with api, write and read repository scope
           GITLAB_PROJECT_ID: ${{ secrets.GITLAB_PROJECT_ID }}
           GITLAB_BRANCH: ${{ secrets.GITLAB_BRANCH }}
           GITLAB_PAT: ${{ secrets.GITLAB_PAT}} # gitlab project access token with role owner and api and read repository and write repository scope
