--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ workflow:
     # and avoid double pipeline trigger one through api source and other through gitlab username source
     - if:
         '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
-        $CI_PIPELINE_SOURCE == "api"'
+        ($CI_PIPELINE_SOURCE == "api" || $CI_PIPELINE_SOURCE == "trigger") '
       # check for changes in the file extension to run the pipeline
       changes:
         - '**.js'
