--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ check_for_relevant_files:
   before_script:
     - apk add --no-cache git # since we are using git command in the script so install git here
     - chmod +x .gitlab/generate-pipeline.sh
+    - echo "CI_COMMIT_BEFORE_SHA: $CI_COMMIT_BEFORE_SHA"
 
   script:
     - sh .gitlab/generate-pipeline.sh
