--- a/.github/workflows/gitlab-trigger-and-sync.yml
+++ b/.github/workflows/gitlab-trigger-and-sync.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Github repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 20 # clone full history, avoids shallow push rejection
+          fetch-depth: 5 # sending previous 5 commits to avoid shallow commit error
 
       - name: Push to Gitlab and Trigger GitLab Pipeline
         run: bash ./ci-scripts/gitlab-sync-and-trigger.sh
