--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,10 @@ stages:
 # This job explicitly checks for file changes and fails if none found
 check_for_relevant_files:
   stage: check
-  before_script:
-    - apk add --no-cache git # since we are using git command in the script so install git here
-    - chmod +x .gitlab/generate-pipeline.sh
-    - echo "CI_COMMIT_BEFORE_SHA: $CI_COMMIT_BEFORE_SHA"
+  before_script: |
+    apk add --no-cache git # since we are using git command in the script so install git here
+    chmod +x .gitlab/generate-pipeline.sh
+    echo "CI_COMMIT_BEFORE_SHA -> $CI_COMMIT_BEFORE_SHA"
 
   script:
     - sh .gitlab/generate-pipeline.sh
