--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,11 @@ workflow:
     - if:
         '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
         ($CI_PIPELINE_SOURCE == "api" || $CI_PIPELINE_SOURCE == "trigger") '
-      # check for changes in the file extension to run the pipeline
-      changes:
-        - '**.js'
-        - '**.json'
-        - '**.*rc'
+      # check for changes in the file extension to run the pipeline will never run in pipeline trigger through api or trigger
+      # changes:
+      #   - '**.js'
+      #   - '**.json'
+      #   - '**.*rc'
 
     - when: never # do not run pipeline on any other condition
 
