--- a/.github/workflows/gitlab-trigger-and-sync.yml
+++ b/.github/workflows/gitlab-trigger-and-sync.yml
@@ -32,4 +32,4 @@ jobs:
           GITLAB_PUSH_TOKEN: ${{ secrets.GITLAB_PUSH_TOKEN }} # gitlab personal access token with api, write and read repository scope
           GITLAB_PROJECT_ID: ${{ secrets.GITLAB_PROJECT_ID }}
           GITLAB_BRANCH: ${{ secrets.GITLAB_BRANCH }}
-          GITLAB_PAT: ${{ secrets.GITLAB_PAT}} # gitlab project access token with role owner and api and read repository and write repository scope
+          # GITLAB_PAT: ${{ secrets.GITLAB_PAT}} # gitlab project access token with role owner and api and read repository and write repository scope
