--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ workflow:
     # and avoid double pipeline trigger one through api source and other through gitlab username source
     - if:
         '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
-        ($CI_PIPELINE_SOURCE == "api" || $CI_PIPELINE_SOURCE == "trigger") '
+        $CI_PIPELINE_SOURCE == "trigger"'
+        # ($CI_PIPELINE_SOURCE == "api" || $CI_PIPELINE_SOURCE == "trigger") '
       # check for changes in the file extension to run the pipeline will never run in pipeline trigger through api or trigger
       # changes:
       #   - '**.js'
@@ -27,7 +28,7 @@ check_for_relevant_files:
   before_script: |
     apk add --no-cache git # since we are using git command in the script so install git here
     chmod +x .gitlab/generate-pipeline.sh
-    echo "CI_COMMIT_BEFORE_SHA -> $CI_COMMIT_BEFORE_SHA"
+    # echo "CI_COMMIT_BEFORE_SHA -> $CI_COMMIT_BEFORE_SHA"
 
   script:
     - sh .gitlab/generate-pipeline.sh
