--- a/.github/workflows/gitlab-trigger-and-sync.yml
+++ b/.github/workflows/gitlab-trigger-and-sync.yml
@@ -16,15 +16,15 @@ jobs:
       - name: Checkout Github repo
         uses: actions/checkout@v4
         with:
-          # setting fetch-depth:5 as buffer to provide the commits from the latest commit to previous successful pushed
-          # since my last 2 pushes on github action failed gitlab didn't get the last 2 commits
-          # actuall gitlab wants to sync the github repo with gitlab repo so keep the fetch-depth equivalent to no of commits pushing to github actions for build
-          # if we are frequently pushing to github then fetch-depth 2 will work (to make git rev-parse also work)
-          # if we are pushing to github after every 10 commits then fetch-depth should be 10 (assuming there were no errors in github actions)
-          # if there were error in github actions then we have to account for that commit
-          # keeping all this in mind we have to set fetch-depth value
-          fetch-depth: 5 # sending previous 5 commits to avoid shallow commit error and make git rev-parse work in gitlab-sync-and-trigger.sh file
-
+          # Set fetch-depth to include previous commits for proper syncing with GitLab.
+          # Explanation:
+          # - Provides a buffer of recent commits to handle cases where previous GitHub Actions
+          #   runs failed, ensuring GitLab receives all necessary commits.
+          # - Adjust fetch-depth based on your push frequency (to avoid shallow commit errors):
+          #   * Frequent pushes: fetch-depth 2 is usually sufficient.
+          #   * Less frequent (e.g., 10 commits at a time): set fetch-depth to 10.
+          #   * Always account for any failed GitHub Actions .
+          fetch-depth: 5 # Include the last 5 commits to ensure git rev-parse works in gitlab-sync-and-trigger.sh
       - name: Push to Gitlab and Trigger GitLab Pipeline
         run: bash ./ci-scripts/gitlab-sync-and-trigger.sh
         env:
