--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ image: alpine:latest
 # set workflow rules for all the stages, exit the workflow if rules don't match
 workflow:
   rules:
-    # run pipeline on branch push, tag push and only through api source
+    # run pipeline on branch push, tag push and only through trigger source
     # and avoid double pipeline trigger one through api source and other through gitlab username source
     - if:
         '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
@@ -32,7 +32,7 @@ check_for_relevant_files:
 
   script:
     - sh .gitlab/generate-pipeline.sh
-  # using artifacts:reports:dotenv to pass environment variable to the subsequent job as signal to start or stop subsequent jobs
+  # using artifacts to pass generated file to the subsequent job
   artifacts:
     paths:
       - .gitlab/pipeline-config.yml
