--- a/.circleci/config_continued.yml
+++ b/.circleci/config_continued.yml
@@ -1,3 +1,4 @@
+# this is how the final config_continued.yml file will look after preprocessor.sh concatenates modular files
 # Circle CI config split up in modules
 # https://medium.com/%40philblenk6/circleci-config-splitting-7024bad400e3
 # https://github.com/blenky36/circleci-config-splitting?source=post_page-----7024bad400e3---------------------------------------
