--- a/project/package.json
+++ b/project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project",
-  "version": "1.0.0",
+  "version": "1.0.1-gitlabci.0",
   "description": "",
   "main": "index.js",
   "license": "MIT",
